--- a/web/draw.html
+++ b/web/draw.html
@@ -12,61 +12,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="static/js/bootstrap.min.js"></script>
-        <script src="static/js/draw.js"></script>
+        <script src="static/js/lsystem.js"></script>
     </head>
     <body>
         <button type="button" class="btn btn-lg btn-default" onclick="pull_draw_data()">Randomize</button>
         <button type="button" class="btn btn-lg btn-default" onclick="modal_rules()">LSystem</button>
-        <button type="button" class="btn btn-lg btn-default" data-toggle="modal" data-target="#config-modal">Config</button>
-
-        <div class="modal fade" id="config-modal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">LSystem Config</h4>
-                    </div>
-                    <div class="modal-body">
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
-
-        <div class="modal fade" id="lsystem-modal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">LSystem Rules</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form class="form-horizontal" id="lsystem_rule_form" enctype="application/json" action="rules">
-                            <div id="lsystem_rule_form_entry">
-                                <div class="form-inline">
-                                    <div class="form-group">
-                                        <label class="control-label" id="rule_label">Rule #</label>
-                                            <input type="text" class="form-control" id="rule_input" /> 
-                                        <label class="control-label" id="weight_label">Rule #</label>
-                                            <input type="text" class="form-control" id="weight_input">
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Save changes</button>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
 
         <div id="draw-shapes">
-            <div class="two-container"></div>
         </div>
 
     </body>
